--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 # $Id$
 
-June xx, 2003
+July 12, 2003
+    libnss-mysql 1.0 released
+
+June 18, 2003
     libnss-mysql 0.9 released
 
 January 25, 2003
