--- a/THANKS
+++ b/THANKS
@@ -8,4 +8,5 @@ Len Rose <len@netsys.com>
 Luke Howard <lukeh@padl.com>
 	For unknowingly providing NSS reference material (nss_ldap)
 
-
+Clement Laforet <sheepkiller@cultdeadsheep.org>
+    For help on the FreeBSD port
