--- a/README
+++ b/README
@@ -46,16 +46,15 @@ The details
       sql database in sample/sample_database.sql.  Read that file for more
       details on the sample database.
 
-    o Edit /etc/nsswitch.conf and add 'mysql' to passwd/shadow/group
-      For example:
+    o Edit (or create) /etc/nsswitch.conf such that it contains at least the
+      following:
         passwd: files mysql
         shadow: files mysql
         group:  files mysql
 
-      If you don't have a 'shadow' line, do not create one - your system
-      doesn't need it (Solaris, FreeBSD).
-      If you don't want groups from MySQL, simply don't include it in the
-      'group' line.
+      Do not enter the 'shadow' line on any system except Linux.
+      If you don't want groups from MySQL, simply don't include 'mysql' in 
+      in the 'group' line.
 
 64-bit Support (SPARC V9/Solaris 7+)
 ====================================
@@ -93,6 +92,7 @@ Tested with
       RedHat 6.1 - 9.0
       Solaris 6-8 (sparc)
       Solaris 8 (x86)
+      FreeBSD 5.1
     MySQL
       MySQL 3.20.?? - 4.0.13
     Compilers
