--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 
 1.0 - 1.1
 
+    * BUGFIX: Don't leak any symbols except what's necessary - prevents
+              problems with our RPM and some programs that use a different
+              version of MySQL shared lib (e.g. apache with php); currently
+              only applies to RPM .spec.
+
     * DOCS:   Updated README to better suit FreeBSD installations
 
 0.9 - 1.0
