--- a/README
+++ b/README
@@ -29,8 +29,8 @@ Prerequisites
     o Installing from Solaris Package
       o MySQL server (local or remote)
 
-    o Installing from FreeBSD Port (coming soon)
-      o ? MySQL client library (local)
+    o Installing from FreeBSD Port
+      o MySQL client library (local)
       o MySQL server (local or remote)
 
 The details
@@ -90,13 +90,15 @@ Tested with
 ===========
     Operating Systems
       RedHat 6.1 - 9.0
+      Fedora Core 1
       Solaris 6-8 (sparc)
+      Solaris 9 (sparc) (PAM apps will NOT work!)
       Solaris 8 (x86)
       FreeBSD 5.1
     MySQL
-      MySQL 3.20.?? - 4.0.13
+      MySQL 3.20.?? - 4.0.16
     Compilers
-      gcc 2.95.2 - 3.2
+      gcc 2.95.2 - 3.3.2
       Forte Developer 7 C 5.4 (Sun Workshop)
 
 $Id$
