--- a/ChangeLog
+++ b/ChangeLog
@@ -8,8 +8,8 @@
 
     * BUGFIX: Don't leak any symbols except what's necessary - prevents
               problems with our RPM and some programs that use a different
-              version of MySQL shared lib (e.g. apache with php); currently
-              only applies to RPM .spec.
+              version of MySQL shared lib (e.g. apache with php); Requires
+              libtool >= 1.5.2
 
     * DOCS:   Updated README to better suit FreeBSD installations
 
