--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 
 1.0 - 1.1
 
+    * CHANGE: 'configure' now takes just --with-mysql to specify MySQL
+              location instead of two separate (--with-mysql-inc and
+              --with-mysql-lib) options.  The following base locations
+              are automatically searched in this order: /usr, /usr/local,
+              /usr/local/mysql, /opt/local, /opt/local/mysql.
+
     * BUGFIX: (interim) Try query a couple more times if it fails
 
     * BUGFIX: Groups without members weren't showing up in getgrent's
