--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 1.2 - 1.3 (NOT YET RELEASED)
 
+    * BUGFIX: Removed extraneous UNLOCK that caused thread instability
+              due to changes in version 1.2
+
     * BUGFIX: Added atexit() handler to close MySQL connection upon process
               exit.  Should clear up any "Aborted connection [...]
               Got an error reading communication packets" messages in the
@@ -20,8 +23,7 @@
 
     * CHANGE: Send a syslog if number of columns returned != expected #
 
-    * CHANGE: (Internal) code cleanup (including Makefile.am) and
-              comments
+    * CHANGE: (Internal) code and support file cleanup; comments
 
 1.1 - 1.2
 
