--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 # $Id$
 
-November 13, 2003
+January 30, 2005
+    libnss-mysql 1.4 released
+
+November 13, 2004
     libnss-mysql 1.3 released
 
 March 28, 2004
