--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 # $Id$
 
+1.4 - 1.5
+    * BUGFIX: Bug ID 1244484 - Connect timeout broke ability to connect to
+              MySQL server on some platforms.
+
 1.3 - 1.4
 
     * CHANGE: Read [libnss-mysql] and [client] sections in /etc/my.cnf;
