--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,15 @@
 # $Id$
 
+1.5 - 1.6
+
+    * BUGFIX: Bug ID 1504864 - Return Type Error on _nss_mysql_run_query
+
+    * BUGFIX: Bug ID 1415600 - "DESTDIR=/another/root make install" fails
+
 1.4 - 1.5
+
     * BUGFIX: Bug ID 1244484 - Connect timeout broke ability to connect to
               MySQL server on some platforms.
-
 1.3 - 1.4
 
     * CHANGE: Read [libnss-mysql] and [client] sections in /etc/my.cnf;
