--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
               *not* officially taking over the project since it's a fork.
               Might have to come up with different name, but I'm not too worried
               about that for now.
+    * NEW:    Going straight to version 1.7 to avoid any confusion with older
+              snapshots
     * CHANGE: Modernized build system, depend on C99 and make use of the
               benefits
     * CHANGE: Dropped Solaris support
